--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,6 +109,25 @@ body::-webkit-scrollbar-thumb:hover{
     padding: 0 15px;
 }
 
+.has-scrollbar{
+    padding-bottom: 5px;
+}
+.has-scrollbar::-webkit-scrollbar{
+    width: 12px; /*for vertical scroll*/
+    height: 12px;
+
+}
+.has-scrollbar::-webkit-scrollbar-thumb{
+    background: transparent;
+    border: 3px solid var(--white);
+    border-radius: 20px;
+}
+
+.has-scrollbar:hover::-webkit-scrollbar-thumb{
+    background: hsa(0, 0%, 90%);
+}
+
+.has-scrollbar::-webkit-scrollbar-thumb:hover{background: hsl(0, 0%, 80%);}
 
 /*========== Main =========*/
 /* --overlay-- */
@@ -372,3 +391,145 @@ body::-webkit-scrollbar-thumb:hover{
     border: 1px solid var(--cultured);
     border-radius: var(--border-radius-md);
 }
+
+.search-field::-webkit-search-cancel-button{
+    display: none;
+}
+
+.search-btn{
+    background: transparent;
+    position: absolute;
+    top: 50%;
+    right: 2px;
+    transform: translateY(-50%);
+    color: var(--onyx);
+    font-size: 18px;
+    padding: 8px 15px;
+    transition: color var(--transition-timing);
+}
+
+.search-btn:hover{
+    color: var(--salmon-pink);
+}
+
+.mobile-bottom-navigation{
+    background: var(--white);
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    max-width: 500px;
+    margin: auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 5px 0;
+    box-shadow: 0 0 10px hsla(0, 0%,0%,.25);
+    z-index: 5;
+}
+.mobile-bottom-navigation .action-btn{
+    position: relative;
+    font-size: 26px;
+    color: var(--eerie-black);
+    padding: 10px;
+
+}
+.mobile-bottom-navigation .count{
+    background: var(--bittersweet);
+    color: var(--white);
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 12px;
+    font-weight: var(--weight-500);
+    line-height: 1;
+    padding: 2px 4px;
+    border-radius: 20px;
+}
+
+.mobile-navigation-menu{
+    background: var(--white);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    max-width: 320px;
+    height: 100vh;
+    padding: 20px;
+    box-shadow: 0 0 10px hsla(0, 0%,0%,.15);
+    overflow-y: scroll;
+    overscroll-behavior: contain;
+    visibility: hidden;
+    transition: .5s ease;
+    z-index: 20;
+}
+
+.mobile-navigation-menu.active{
+    left: 0;
+    visibility: visible;
+}
+
+.menu-top{
+    padding-bottom: 15px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 2px solid var(--cultured);
+}
+
+.menu-top .menu-title{
+    color: var(--salmon-pink);
+    font-size: var(--fs-4);
+    font-weight: var(--weight-600);
+}
+.menu-close-btn{
+    color: var(--eerie-black);
+    font-size: 22px;
+}
+
+.menu-close-btn ion-icon{
+    --ionicon-stroke-width: 50px;
+}
+.mobile-menu-category-list{
+    margin-bottom: 30px;
+}
+
+.menu-category .accordion-menu{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.mobile-menu-category-list .menu-category{
+    border-bottom: 1px solid var(--cultured);
+}
+
+.mobile-menu-category-list .menu-title{
+    color: var(--onyx);
+    font-size: var(--fs-6);
+    font-weight: var(--weight-500);
+    padding: 12px 0;
+}
+
+.accordion-menu > div{
+    font-size: 14px;
+}
+
+.accordion-menu ion-icon{
+    color: var(--onyx);
+    --ionicon-stroke-width: 90px;
+}
+
+.accordion-menu.active .add-icon,
+.accordion-menu .remove-icon{
+    display: none;
+}
+.accordion-menu .add-icon,
+.accordion-menu.active .remove-icon{
+    display: block;
+}
+
