--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,6 +130,17 @@ body::-webkit-scrollbar-thumb:hover{
 
 .has-scrollbar::-webkit-scrollbar-thumb:hover{background: hsl(0, 0%, 80%);}
 
+.title{
+    color: var(--eerie-black);
+    font-size: var(--fs-5);
+    font-weight: var(--weight-600);
+    letter-spacing: .4px;
+    text-transform: capitalize;
+    padding-bottom: 10px;
+    border-bottom: 1px solid var(--cultured);
+    margin-bottom: 30px;
+}
+
 /*========== Main =========*/
 /* --overlay-- */
 .overlay{
@@ -604,6 +615,13 @@ body::-webkit-scrollbar-thumb:hover{
     font-size: 20px;
     border-radius: var(--border-radius-md);
 }
+.social-link{
+    transition: transform .4s;
+}
+
+.social-link:hover{
+    transform: translateY(-.5rem);
+}
 /*=========== Banner ==========*/
 
 .banner{
@@ -910,4 +928,81 @@ body::-webkit-scrollbar-thumb:hover{
     font-size: var(--fs-7);
     font-weight: var(--weight-600);
     color: var(--davys-gray);
+}
+/*========== Product Minimal ==========*/
+.product-minimal{
+    margin-bottom: 30px;
+}
+
+.product-minimal .product-showcase{
+    margin-bottom: 10px;
+}
+
+.product-minimal .showcase-wrapper{
+    display: flex;
+    align-items: center;
+    overflow-x: auto;
+    overscroll-behavior-inline: contain;
+    scroll-snap-type: inline mandatory;
+}
+
+.product-minimal .showcase-container{
+    min-width: 100%;
+    padding: 0 5px;
+    scroll-snap-align: start;
+}
+
+.product-minimal .showcase{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 15px;
+    border:  1px solid var(--cultured);
+    padding: 15px;
+    border-radius: var(--border-radius-md);
+}
+
+.product-minimal .showcase:not(:last-child){
+    margin-bottom: 15px;
+}
+.product-minimal .showcase-content{
+    width: calc(100% - 85px);
+}
+
+.product-minimal .showcase-title{
+    color: var(--eerie-black);
+    font-size: var(--fs-7);
+    font-weight: var(--weight-600);
+    text-transform: capitalize;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-bottom: 2px;
+}
+.product-minimal .showcase-category{
+    width: max-content;
+    color: var(--davys-gray);
+    font-size: var(--fs-8);
+    text-transform: capitalize;
+    margin-bottom: 3px;
+}
+
+.product-minimal .showcase-category:hover{
+    color: var(--salmon-pink);
+}
+
+.product-minimal .price-box{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.product-minimal .price{
+    font-weight: var(--weight-700);
+    font-size: var(--fs-7);
+    color: var(--salmon-pink);
+}
+
+.product-minimal .price-box del{
+    font-size: var(--fs-9);
+    color: var(--sonic-silver);
 }
