--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1315,3 +1315,49 @@ body::-webkit-scrollbar-thumb:hover{
 .product-grid del{
     color: var(--sonic-silver);
 }
+
+/*========== Testimonial ==========*/
+
+.testimonials-box{
+    margin-bottom: 50px;
+}
+
+.testimonial-card{
+    padding: 30px 20px;
+    border: 1px solid var(--cultured);
+    border-radius: var(--border-radius-md);
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+.testimonial-banner{
+    margin: auto;
+    margin-bottom: 20px;
+    border-radius: 50%;
+}
+
+.testimonial-name{
+    font-weight: var(--weight-700);
+    text-transform: uppercase;
+    color: var(--sonic-silver);
+    margin-bottom: 5px;
+}
+
+.testimonial-title{
+    color: var(--onyx);
+    font-size: var(--fs-7);
+    margin-bottom: 15px;
+}
+
+.quotation-img{
+    margin: auto;
+    margin-bottom: 10px;
+
+}
+
+.testimonial-desc{
+    max-width: 70%;
+    margin: auto;
+    color: var(--sonic-silver);
+    font-size: var(--fs-7);
+}
