--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1419,3 +1419,48 @@ body::-webkit-scrollbar-thumb:hover{
     font-weight: var(--weight-700);
     margin: auto;
 }
+
+/*========= Service =========*/
+.service-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 30px;
+    padding: 30px 15px;
+    border: solid 1px var(--cultured);
+    border-radius: var(--border-radius-md);
+}
+
+.service-item{
+    min-width: 190px;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.service-icon{
+    font-size: 35px;
+    color: var(--salmon-pink);
+    transition: var(--transition-timing);
+}
+.service-icon ion-icon{
+    --ionicon-stroke-width:25px;
+}
+.service-item:hover .service-icon{
+    color: var(--eerie-black);
+}
+
+.service-title{
+    color: var(--sonic-silver);
+    font-size: var(--fs-7);
+    font-weight: var(--weight-600);
+    text-transform: capitalize;
+    margin-bottom: 5px;
+}
+
+.service-desc{
+    color: var(--sonic-silver);
+    font-style: var(--fs-9);
+    
+}
