--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1670,3 +1670,185 @@ footer{
     display: inline;
     color: inherit;
 }
+
+
+/*========== Responsive ==========*/
+@media (min-width: 480px){
+    :root{
+        --fs-1: 1.875rem;
+    }
+
+
+    .header-top{
+        display: block;
+        padding: 10px 0;
+        border-bottom: 1px solid var(--cultured);
+    }
+    .header-social-container,
+    .header-top-actions{
+        display: none;
+    }
+    
+    .header-alert-news{
+        color: var(--sonic-silver);
+        font-size: var(--fs-9);
+        text-transform: uppercase;
+    }
+    
+    .header-alert-news b{
+        font-weight: var(--weight-500);
+    }
+    .header-main{
+        padding: 25px 0;
+    }
+    
+    .mobile-bottom-navigation{
+        border-bottom-left-radius: var(--border-radius-md);
+        border-top-right-radius: var(--border-radius-md);
+    }
+
+    .slider-item{
+        aspect-ratio: 5 / 3;
+    }
+
+    .banner-content{
+        top: 50%;
+        right: auto;
+        bottom: auto;
+        transform: translateY(-50%);
+        max-width: 320px;
+    }
+
+    .banner-subtitle{
+        --fs-7:1rem;
+    }
+    .banner-text{
+        display: block;
+        color: var(--sonic-silver);
+        font-size: var(--fs-7);
+        font-weight: var(--weight-500);
+        margin-bottom: 10px;
+    }
+    .banner-text b {
+        font-size: var(--fs-2);
+    }
+
+    .banner-btn{
+        padding: 7px 20px;
+    }
+
+    .product-grid{
+        grid-template-columns: 1fr 1fr;
+        gap: 30px;
+    }
+
+    .cta-content{
+        padding: 40px;
+    }
+    .cta-content .discount{
+        --fs-11: 0.875rem;
+        padding: 5px 10px;
+    }
+
+    .cta-title{
+        --fs-5:1.5rem;
+    }
+
+    .cta-text{
+        --fs-7:1rem;
+    }
+
+    .cta-btn{
+        --fs-9: 1rem;
+    }
+
+    .copyright{
+        --fs-8: 0.875rem;
+    }
+
+
+}
+
+@media (min-width: 570px){
+
+    .header-top .container,
+    .header-main .container{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .header-logo{
+        margin-bottom: 0;
+    }
+
+    .header-top-actions{
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .header-top-actions select{
+        border: none;
+        display: block;
+        min-width: 80px;
+        padding: 5px 0;
+        font: inherit;
+        color: var(--sonic-silver);
+        font-size: var(--fs-8);
+        text-transform: uppercase;
+        cursor: pointer;
+        transition: var(--transition-timing);
+
+    }
+
+    .header-top-actions select:hover{
+        color: var(--eerie-black);
+    }
+
+    .header-search-container{
+        min-width: 300px;
+    }
+
+    .slider-item{
+        aspect-ratio: 4 / 2;
+    }
+
+    .banner-content{
+        background: none;
+    }
+
+    .category-item-container{
+        gap: 30px;
+    }
+
+    .category-item{
+        min-width: calc(50% - 15px);
+    }
+
+    .product-minimal .showcase-container{
+        min-width: 50%;
+    }
+
+    .product-featured .showcase-img{
+        max-width: 450px ;
+        margin: auto;
+    }
+    .product-featured .countdown{
+        gap: 20px;
+    }
+
+    .cta-container{
+        aspect-ratio: 6 / 5;
+    }
+
+    .blog-container{
+        gap: 30px;
+    }
+
+    .blog-card{
+        min-width: calc(50% - 15px);
+    }
+
+}
+
+
